@@ -66,7 +66,7 @@
                     {% if forloop.last %}</ul>{% endif %}
                 {% endfor %}
                 <p>{% trans "Total:" %} {{ intervention.total_manday }} {% trans "manday" %}{{ intervention.total_manday|pluralize }}</p>
-                <p>{% trans "Total cost:" %} {{ intervention.total_cost|floatformat:2 }} &euro;</p>
+                <p>{% trans "Total cost:" %} {{ intervention.total_cost_mandays|floatformat:2 }} &euro;</p>
             </td>
         </tr>
         <tr>
